--- a/custom_components/lifesmart/manifest.json
+++ b/custom_components/lifesmart/manifest.json
@@ -1,13 +1,17 @@
 {
   "domain": "lifesmart",
   "name": "LifeSmart",
-  "codeowners": ["@MapleEve"],
+  "codeowners": [
+    "@MapleEve"
+  ],
   "config_flow": true,
   "dependencies": [],
   "documentation": "https://github.com/MapleEve/lifesmart-HACS-for-hass",
   "integration_type": "hub",
   "iot_class": "cloud_push",
   "issue_tracker": "https://github.com/MapleEve/lifesmart-HACS-for-hass/issues",
-  "requirements": ["websocket-client"],
+  "requirements": [
+    "websocket-client"
+  ],
   "version": "24.04.09"
 }
