♻️ [2024-04-26] 重构代码: 使用black重构代码 ⚰️ [2024-04-27] 删除死代码:  init中各种无用的状态定义删除，仅保留dispatch功能

--- a/custom_components/lifesmart/manifest.json
+++ b/custom_components/lifesmart/manifest.json
@@ -1,6 +1,6 @@
 {
-  "domain": "lifesmart",
-  "name": "LifeSmart",
+  "domain": "lifesmart-iot",
+  "name": "iLifeSmart",
   "codeowners": [
     "@MapleEve"
   ],
@@ -11,7 +11,7 @@
   "iot_class": "cloud_push",
   "issue_tracker": "https://github.com/MapleEve/lifesmart-HACS-for-hass/issues",
   "requirements": [
-    "websocket-client"
+    "websockets"
   ],
-  "version": "24.04.10"
+  "version": "24.05.01"
 }
