♻️ [2024-04-26] 重构代码: 更换名称保证HACS的注册

--- a/custom_components/lifesmart/manifest.json
+++ b/custom_components/lifesmart/manifest.json
@@ -1,6 +1,6 @@
 {
-  "domain": "lifesmart-iot",
-  "name": "iLifeSmart Devices Integration",
+  "domain": "lifesmart",
+  "name": "LifeSmart Devices Integration",
   "codeowners": [
     "@MapleEve"
   ],
