📝 [2024-04-28] 编写文档: HACS 集成改名

--- a/custom_components/lifesmart/manifest.json
+++ b/custom_components/lifesmart/manifest.json
@@ -1,17 +1,17 @@
 {
   "domain": "lifesmart",
-  "name": "LifeSmart",
+  "name": "LifeSmart IoT Integration",
   "codeowners": [
     "@MapleEve"
   ],
   "config_flow": true,
   "dependencies": [],
-  "documentation": "https://github.com/MapleEve/lifesmart-HACS-for-hass",
+  "documentation": "https://github.com/MapleEve/lifesmart-for-homeassistant",
   "integration_type": "hub",
   "iot_class": "cloud_push",
-  "issue_tracker": "https://github.com/MapleEve/lifesmart-HACS-for-hass/issues",
+  "issue_tracker": "https://github.com/MapleEve/lifesmart-for-homeassistant/issues",
   "requirements": [
     "websocket-client"
   ],
-  "version": "24.04.10"
+  "version": "v24.04.27"
 }
