🐛 [2025-07-16] 修复 BUG: 将 LifeSmartOptionsFlowHandler 中 async_show_form 调用里的 step_id 修改为正确的方法名。
                       "cloud_token" -> "auth_token"
                       "cloud_password" -> "auth_password"

--- a/custom_components/lifesmart/services.yaml
+++ b/custom_components/lifesmart/services.yaml
@@ -20,7 +20,7 @@ send_keys:
       description: 遥控器命令key
       example: '["key"]'
 
-scene_set:
+trigger_scene:
   description: 场景设置.
   fields:
     agt:
