🔨 chore: Add github issue template

--- a/.github/ISSUE_TEMPLATE/1_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1_bug_report.yml
@@ -1,7 +1,6 @@
 name: '🐛 Bug Report'
-description: 'Report an bug'
+description: 'Report a bug'
 labels: [ 'unconfirm' ]
-type: Bug
 body:
   - type: dropdown
     attributes:
