👷 [2025-07-20]  CI : Issue 模板更新

--- a/.github/ISSUE_TEMPLATE/1_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1_bug_report.yml
@@ -1,6 +1,7 @@
 name: '🐛 Bug Report'
 description: 'Report a bug'
-labels: [ 'unconfirm' ]
+title: '[BUG] '
+labels: [ '🔍 Unconfirmed' ]
 body:
   - type: dropdown
     attributes:
