--- a/.github/ISSUE_TEMPLATE/2_feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/2_feature_request.yml
@@ -1,6 +1,7 @@
 name: '🌠 Feature Request'
 description: 'Suggest an idea'
 title: '[Request] '
+labels: [ '🌠 Feature Request' ]
 body:
   - type: textarea
     attributes:
