--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,8 @@ jobs:
           pip install pytest pytest-asyncio pytest-cov pytest-homeassistant-custom-component
 
       - name: Run unit tests with pytest
+        env:
+          PYTHONPATH: .
         run: |
           pytest \
             -v \
