♻️ [2025-07-23] 重构代码: 重构 Fixtures: 将分散的模拟数据和辅助函数统一到 conftest.py，遵循 DRY 原则。

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   test:
-    name: "Run LifeSmart Unit/Union Tests"
+    name: "LifeSmart Unit/Union Tests"
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
