👔 [2025-07-29] 添加或修改业务逻辑: CI 增加 flake8 lint

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Run Union Tests CI
+name: LS Union Tests CI
 
 on:
   push:
@@ -17,7 +17,6 @@ jobs:
       matrix:
         python-version: [ "3.12" ]
 
-
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v4
@@ -30,7 +29,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pytest-asyncio pytest-cov pytest-homeassistant-custom-component
+          pip install pytest pytest-asyncio pytest-cov pytest-homeassistant-custom-component flake8
+
+      - name: Run Flake8 Lint
+        run: |
+          flake8 --count --show-source --statistics custom_components/lifesmart
 
       - name: Run unit tests with pytest
         env:
