👷 [2025-07-29] 添加 CI 构建到系统: 增加测试结果报告

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,7 +45,14 @@ jobs:
             "custom_components/lifesmart/tests/" \
             --cov=custom_components.lifesmart \
             --cov-branch \
-            --cov-report=xml
+            --cov-report=xml \
+            --junitxml=junit.xml -o junit_family=legacy
+
+      - name: Upload test results to Codecov
+        if: ${{ !cancelled() }}
+        uses: codecov/test-results-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
