💚 [2025-07-30] 修复 CI 构建:  修复 pytest 报错

--- a/custom_components/lifesmart/tests/pytest.ini
+++ b/custom_components/lifesmart/tests/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 minversion = 6.0
-addopts = -ra -q --color=yes
+addopts = -ra -q --cov-omit="custom_components/lifesmart/tests/*" --color=yes
 testpaths = .
 python_files = test_*.py
 asyncio_mode = auto
