--- a/custom_components/lifesmart/tests/pytest.ini
+++ b/custom_components/lifesmart/tests/pytest.ini
@@ -1,8 +1,12 @@
 [pytest]
 minversion = 6.0
-addopts = -ra -q --cov-omit="custom_components/lifesmart/tests/*" --color=yes
+addopts = -ra -q --color=yes
 testpaths = .
 python_files = test_*.py
 asyncio_mode = auto
 markers =
     github: Mark tests to run in GitHub Actions CI
+
+[coverage:run]
+omit =
+    custom_components/lifesmart/tests/*
