💚 [2025-07-30] 修复 CI 构建: 按照 pytest 官方要求移动和配置测试文件

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 minversion = 6.0
 addopts = -ra -q --color=yes
-testpaths = .
+testpaths = custom_components/lifesmart/tests
 python_files = test_*.py
 asyncio_mode = auto
 markers =
