🧑‍💻 [2025-07-30] 提升开发者体验: 忽略 tests 目录下的所有文件的覆盖率

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,7 +41,7 @@ jobs:
         run: |
           pytest \
             -v \
-            --cov=custom_components.lifesmart \
+            --cov \
             --cov-branch \
             --cov-report=xml \
             --junitxml=junit.xml -o junit_family=legacy
