--- a/pytest.ini
+++ b/pytest.ini
@@ -8,5 +8,6 @@ markers =
     github: Mark tests to run in GitHub Actions CI
 
 [coverage:run]
+source = custom_components.lifesmart
 omit =
     custom_components/lifesmart/tests/*
