💚 [2025-07-31] 修复 CI 构建: 未引入内容和 pytest 初始值

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,6 +4,7 @@ addopts = -ra -q --color=yes
 testpaths = custom_components/lifesmart/tests
 python_files = test_*.py
 asyncio_mode = auto
+pythonpath = .
 markers =
     github: Mark tests to run in GitHub Actions CI
 
