--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,16 +15,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # 测试四个关键版本：Python各版本全面支持的节点 + 最新版本
-        homeassistant-version: [ "2023.6.3", "2024.2.0", "2024.12.0", "2025.7.4" ]
+        # 测试四个关键版本：使用pytest插件实际支持的HA版本
+        homeassistant-version: [ "2023.6.0", "2024.2.0", "2024.12.0", "latest" ]
         include:
-          - homeassistant-version: "2023.6.3"
-            python-version: "3.11"  # 首个支持Python 3.11的HA版本
+          - homeassistant-version: "2023.6.0"
+            python-version: "3.11"  # Python 3.11全面支持
           - homeassistant-version: "2024.2.0"
-            python-version: "3.12"  # Python 3.12全面支持（所有安装方式）
+            python-version: "3.12"  # Python 3.12全面支持
           - homeassistant-version: "2024.12.0"
-            python-version: "3.13"  # Python 3.13全面支持（所有安装方式）
-          - homeassistant-version: "2025.7.4"
+            python-version: "3.13"  # Python 3.13全面支持
+          - homeassistant-version: "latest"
             python-version: "3.13"  # 最新版本
 
     steps:
@@ -39,23 +39,21 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          # 先安装指定版本的HA，使用预编译wheel避免编译问题
-          pip install homeassistant==${{ matrix.homeassistant-version }} --only-binary=all
           
           # 根据HA版本安装兼容的pytest-homeassistant-custom-component版本
-          # 确保使用正确的版本约束避免依赖冲突
-          if [[ "${{ matrix.homeassistant-version }}" == "2023.6.3" ]]; then
-            # HA 2023.6.3 + Python 3.11 兼容版本 - 使用确认兼容的精确版本
-            pip install "pytest>=7.2.1,<8.0.0" "pytest-homeassistant-custom-component==0.13.39"
+          # 让pytest插件自动安装正确的HA版本
+          if [[ "${{ matrix.homeassistant-version }}" == "2023.6.0" ]]; then
+            # HA 2023.6.0 - 使用插件 0.13.36
+            pip install "pytest>=7.2.1,<8.0.0" "pytest-homeassistant-custom-component==0.13.36"
           elif [[ "${{ matrix.homeassistant-version }}" == "2024.2.0" ]]; then
-            # HA 2024.2.0 + Python 3.12 兼容版本  
-            pip install "pytest>=7.4.0,<8.0.0" "pytest-homeassistant-custom-component>=0.13.0,<0.14.0"
+            # HA 2024.2.0 - 使用插件 0.13.99
+            pip install "pytest>=7.4.0,<8.0.0" "pytest-homeassistant-custom-component==0.13.99"
           elif [[ "${{ matrix.homeassistant-version }}" == "2024.12.0" ]]; then
-            # HA 2024.12.0 + Python 3.13 兼容版本
-            pip install "pytest>=8.0.0,<9.0.0" "pytest-homeassistant-custom-component>=0.13.100,<0.14.0"
-          elif [[ "${{ matrix.homeassistant-version }}" == "2025.7.4" ]]; then
-            # HA 2025.7.4 + Python 3.13 最新版本
-            pip install "pytest>=8.0.0" "pytest-homeassistant-custom-component>=0.13.200"
+            # HA 2024.12.0 - 使用插件 0.13.190
+            pip install "pytest>=8.0.0,<9.0.0" "pytest-homeassistant-custom-component==0.13.190"
+          elif [[ "${{ matrix.homeassistant-version }}" == "latest" ]]; then
+            # HA 最新 - 使用最新插件
+            pip install "pytest" "pytest-homeassistant-custom-component"
           else
             # 回退到通用版本
             pip install pytest pytest-homeassistant-custom-component
