💚 [2025-08-03] 修复 CI 构建: 重复构建测试问题

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,10 +3,9 @@ name: LS Union Tests CI
 on:
   push:
     branches:
-      - '**'  # 任意分支推送都触发测试
+      - '**'
   pull_request:
-    branches:
-      - '**'  # 任意分支的PR都触发测试
+    types: [opened, synchronize, reopened]
   workflow_dispatch:  # 允许手动触发
 
 jobs:
