--- a/codecov.yml
+++ b/codecov.yml
@@ -4,8 +4,9 @@ coverage:
   status:
     project:
       default:
-        informational: true
-
+        informational: false
+        target: 85%           # 目标覆盖率
     patch:
       default:
-        informational: true
+        informational: false
+        target: 70%
