🐛 [2025-08-05] 修复 BUG: Python 3.11 CI环境中banner不显示和pytest警告问题
- 修复pytest_maple_banner.py中的类型注解兼容性问题 (tuple[str,str] -> Tuple[str,str])
- 修复pkg_resources deprecation warning的处理
- 增强conftest.py中的banner导入错误处理和调试信息
- 修复函数命名不一致: create_mock_device_single_io_rgbw_light -> create_mock_device_single_io_rgb_light
- 添加pytest警告过滤器抑制外部插件的deprecation warnings
- 配置asyncio_default_fixture_loop_scope解决pytest-asyncio警告

🧪 修复详情:
- pytest-cov和pytest-asyncio的deprecation warnings已被过滤
- 改进了CI环境中banner显示的错误处理机制
- 添加调试信息帮助诊断CI环境中的显示问题

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,10 +4,20 @@ addopts = -ra -q --color=yes
 testpaths = custom_components/lifesmart/tests
 python_files = test_*.py
 asyncio_mode = auto
+asyncio_default_fixture_loop_scope = function
 pythonpath = .
 markers =
     github: Mark tests to run in GitHub Actions CI
 filterwarnings =
+    # Ignore pytest-cov plugin deprecation warnings (external plugin issue)
+    ignore:The hookimpl.*uses old-style configuration.*:pytest.PytestDeprecationWarning:pytest_cov.plugin
+    # Ignore pytest-asyncio configuration warnings
+    ignore:The configuration option.*asyncio_default_fixture_loop_scope.*is unset.*:pytest.PytestDeprecationWarning:pytest_asyncio.plugin
+    # Ignore pkg_resources deprecation warnings (external package issue)
+    ignore:pkg_resources is deprecated.*:UserWarning
+    # Ignore other common test-related deprecation warnings that are beyond our control
+    ignore:.*deprecated.*:DeprecationWarning:aiohttp.*
+    ignore:.*deprecated.*:DeprecationWarning:homeassistant.*
 
 [coverage:run]
 source = custom_components.lifesmart
