🔧 [2025-08-05] 配置优化: 完善codecov忽略规则
增强codecov.yml配置，确保tests目录下的所有文件都被正确忽略。

技术细节:
- 添加多种忽略模式以确保兼容性
- 新增 "custom_components/lifesmart/tests/" 精确匹配
- 新增 "**/tests/**" 通用tests目录忽略模式
- 解决pytest_maple_banner.py等测试文件被codecov检测的问题

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,6 +1,8 @@
 coverage:
   ignore:
     - "custom_components/lifesmart/tests/**/*"  # 忽略 tests 目录下的所有文件
+    - "custom_components/lifesmart/tests/"      # 额外的忽略模式
+    - "**/tests/**"                             # 通用tests目录忽略
   status:
     project:
       default:
