♻️ [2025-08-09] 重构代码: 完成 mapping 集成

--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,7 @@ Thumbs.db
 # Testing artifacts (allow core scripts, exclude generated files)
 *logs*.txt
 /.testing/*
+/tmp
 
 # But keep important testing scripts and directories
 !/.testing/test_ci_locally.sh
