🏗️ [2025-08-11] 代码优化: 底层架构继续优化，清除硬编码 | 任务ID   | 任务描述                      | 修正状态         | 实际完成度 | 关键问题                             |                                      | -------- | ----------------------------- | ---------------- | ---------- | ------------------------------------ |                                      | phase1_1 | 创建命令映射工具              | ✅ 已完成         | 90%        | 工具基本可用                         |                                      | phase1_2 | 修复device_specs.py中的硬编码 | 🔄 部分完成       | 80%        | 大部分完成，还需优化                 |                                      | phase1_3 | 消除平台文件的fallback依赖    | ❌ **严重未完成** | **10%**    | **Critical: fallback逻辑仍广泛存在** |                                      | phase1_4 | 修复测试文件中的硬编码        | 🔄 部分完成       | 60%        | 仍有关键文件未修复                   |                                      | phase1_5 | 验证阶段1完成度               | ✅ 已完成         | 100%       | 验证工具正常，但揭示了实际问题       |                                      | phase1_6 | 创建阶段1回滚机制             | ✅ 已完成         | 100%       | 回滚机制就绪                         |

--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,10 @@ Thumbs.db
 /.testing/mapping_tool/*.json
 /.testing/mapping_tool/*SUMMARY*.md
 
+# Backup files
+*.bak
+*.bak2
+
 # Auto-generated .gitignore files
 **/.gitignore
 # But keep the root one
