🔧 [2025-08-14] 核心架构重构: 消除fallback依赖与测试体系完善
  - 核心重构: 彻底消除platform文件对fallback逻辑的依赖，建立直接映射机制
  - Fan平台重构: 从复杂fallback转为明确的设备类型映射，支持智能风机的完整功能集
  - Binary Sensor优化: 简化检测逻辑，移除对EnhancedMappingEngine的复杂依赖
  - 测试基础设施升级: 完善conftest.py和测试常量，增强测试工具的稳定性和覆盖率
  - Mapping工具优化: 改进命令映射分析工具，提供更准确的覆盖率统计和验证机制
  - Client层稳定性: 优化openapi_client和protocol的错误处理机制
  - 设备规格重构: device_specs.py架构优化，减少硬编码依赖
  - 常量系统完善: const.py增补关键常量定义，支持新的映射架构

--- a/.testing/mapping_tool/requirements.txt
+++ b/.testing/mapping_tool/requirements.txt
@@ -1,56 +1,5 @@
-# LifeSmart Mapping Tool NLP Dependencies
-# Pure AI文档分析器 - NLP功能所需依赖
-# Updated: 2025-08-11
+# LifeSmart Mapping Tool - Minimal Dependencies
+# Only essential dependencies for core functionality
 
-# =============================================================================
-# Core NLP Libraries (Optional - 纯AI分析器支持)
-# =============================================================================
-
-# spaCy - 主要的NLP处理库
+# Optional: AI analysis (can run without this)
 spacy>=3.7.0
-# 中文语言模型（可选安装）
-# python -m spacy download zh_core_web_sm
-# 英文语言模型（可选安装） 
-# python -m spacy download en_core_web_sm
-
-# NLTK - 自然语言处理工具包
-nltk>=3.8.0
-
-# Transformers - Hugging Face模型库
-transformers>=4.21.0
-
-# =============================================================================
-# Machine Learning backends (可选)
-# =============================================================================
-
-# PyTorch - 深度学习框架
-torch>=2.0.0
-
-# NumPy - 数值计算
-numpy>=1.24.0
-
-# =============================================================================
-# Core Python utilities (必需)
-# =============================================================================
-
-# 正则表达式支持
-regex>=2023.6.3
-
-# =============================================================================
-# Installation Notes
-# =============================================================================
-# 
-# 完全可选安装：
-# - 如果不安装这些依赖，pure_ai_analyzer.py 仍然可以正常运行
-# - 系统会自动检测可用的NLP库并使用基础的规则引擎
-# - 安装NLP库后可以获得更高的语义分析精度
-#
-# 推荐安装方式：
-# 1. 基础功能：无需安装任何依赖
-# 2. 增强NLP：pip install spacy nltk
-# 3. 完整AI：pip install -r requirements.txt
-#
-# 语言模型安装（可选）：
-# python -m spacy download zh_core_web_sm  # 中文模型
-# python -m spacy download en_core_web_sm  # 英文模型
-# python -m nltk.downloader punkt stopwords wordnet  # NLTK数据
