--- a/.testing/mapping_tool/requirements.txt
+++ b/.testing/mapping_tool/requirements.txt
@@ -1,10 +1,59 @@
-# Requirements Base Mode (~10MB)
-# 基础模式 - 只包含核心依赖，AI分析器使用简化模式
+# Requirements Full Mode for Internal Tool (~300MB)
+# 完全体模式 - 包含所有 NLP 和 AI 分析功能，内部工具专用
 
-# Core performance monitoring
+# === Core Performance Monitoring ===
 psutil>=5.9.0
+memory-profiler>=0.61.0
 
-# Python built-in modules are included by default:
+# === Advanced NLP & AI Analysis ===
+# Natural Language Processing
+spacy>=3.7.0
+nltk>=3.8.1
+transformers>=4.35.0
+torch>=2.1.0
+numpy>=1.24.0
+
+# === Text Processing & Analysis ===
+# Advanced text similarity and semantic analysis
+sentence-transformers>=2.2.2
+scikit-learn>=1.3.0
+pandas>=2.0.0
+
+# === Chinese NLP Support ===
+# 中文分词和语言处理
+jieba>=0.42.1
+
+# === Data Validation & Serialization ===
+pydantic>=2.5.0
+jsonschema>=4.19.0
+
+# === Enhanced Logging & Monitoring ===
+colorlog>=6.7.0
+tqdm>=4.66.0
+
+# === Async & Concurrency ===
+aiofiles>=23.2.1
+asyncio-throttle>=1.0.2
+
+# === Performance Optimization ===
+cachetools>=5.3.0
+lru-dict>=1.2.0
+
+# === Testing & Development (内部工具包含测试依赖) ===
+pytest>=7.4.0
+pytest-asyncio>=0.21.1
+pytest-mock>=3.11.1
+coverage>=7.3.0
+
+# === Configuration & Environment ===
+python-dotenv>=1.0.0
+pyyaml>=6.0.1
+
+# === File Format Support ===
+markdown>=3.5.0
+beautifulsoup4>=4.12.0
+
+# Python built-in modules (included by default):
 # - asyncio, json, re, os, sys (built-in)
 # - concurrent.futures (built-in since Python 3.2)
 # - dataclasses (built-in since Python 3.7)
@@ -12,10 +61,12 @@ psutil>=5.9.0
 # - weakref, functools (built-in)
 # - pathlib (built-in since Python 3.4)
 
-# Note: This base mode supports:
-# - Core mapping tool functionality
-# - Memory Agent1 with full performance monitoring
-# - Document parsing without NLP enhancements
-# - Basic regex-based analysis
-# - File I/O operations
-# - Graceful fallback when NLP libraries are missing
+# === Full Mode Features ===
+# - 完整的 NLP 语义分析 (spaCy + transformers)
+# - 中文文本智能处理 (jieba)
+# - 高级设备相似度计算 (sentence-transformers)
+# - 异步 I/O 优化 (aiofiles)
+# - 专业性能监控 (memory-profiler)
+# - 内置测试环境 (pytest suite)
+# - 配置文件支持 (YAML/JSON)
+# - 智能缓存优化 (cachetools + lru-dict)
